--- a/index.html
+++ b/index.html
@@ -49,10 +49,32 @@
                     <circle cx="12" cy="7" r="4"></circle>
                 </svg>
             </a>
+            
+            <!-- Hamburger Menu (Mobile/Tablet) -->
+            <button class="hamburger-menu" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
 
       </div>
     </header>
+    
+    <!-- Mobile Navigation Drawer -->
+    <div class="mobile-nav-overlay"></div>
+    <div class="mobile-nav-drawer">
+        <nav class="mobile-nav">
+            <a href="#" class="mobile-nav-item">Services</a>
+            <a href="#" class="mobile-nav-item">How It Works</a>
+            <a href="#" class="mobile-nav-item">For Professionals</a>
+            <!-- Mobile Location Selector could go here too if needed, keeping it simple for now -->
+            <div class="mobile-location">
+                <span>📍 Bengaluru, KA</span>
+            </div>
+        </nav>
+    </div>
+
     <main id="app">
       <!-- Main content will be here -->
     </main>
