--- a/index.html
+++ b/index.html
@@ -76,7 +76,156 @@
     </div>
 
     <main id="app">
-      <!-- Main content will be here -->
+      <!-- 1. HERO SECTION -->
+      <section class="hero-section fade-in-up">
+        <div class="container hero-container">
+          <h1 class="hero-headline">NODE — The trusted connection for local work</h1>
+          <p class="hero-subheadline">Verified firms. Transparent pricing. Work done with accountability.</p>
+          <div class="hero-actions">
+            <a href="#" class="btn btn-primary">Find a Trusted Service</a>
+            <a href="#" class="link-secondary">How NODE Works →</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 2. TRUST SIGNAL STRIP -->
+      <section class="trust-strip fade-in-up delay-1">
+        <div class="container trust-grid">
+          <div class="trust-item">
+            <span class="trust-icon">🛡️</span>
+            <span class="trust-text">Verified firms & professionals</span>
+          </div>
+          <div class="trust-item">
+            <span class="trust-icon">📍</span>
+            <span class="trust-text">Local & accountable services</span>
+          </div>
+          <div class="trust-item">
+            <span class="trust-icon">💰</span>
+            <span class="trust-text">Clear pricing, no surprises</span>
+          </div>
+          <div class="trust-item">
+            <span class="trust-icon">🤝</span>
+            <span class="trust-text">Platform-backed assurance</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- 3. HOW NODE WORKS -->
+      <section class="how-it-works section-padding fade-in-up delay-2">
+        <div class="container">
+          <div class="steps-grid">
+            <div class="step-card">
+              <div class="step-number">01</div>
+              <h3 class="step-title">Tell us what work you need</h3>
+            </div>
+            <div class="step-card">
+              <div class="step-number">02</div>
+              <h3 class="step-title">Get matched with a verified firm</h3>
+            </div>
+            <div class="step-card">
+              <div class="step-number">03</div>
+              <h3 class="step-title">Work completed with platform assurance</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 4. SERVICES OVERVIEW -->
+      <section class="services section-padding fade-in-up">
+        <div class="container">
+          <div class="services-grid">
+            <!-- Service 1 -->
+            <div class="service-card">
+              <div class="service-icon">🔧</div>
+              <h3 class="service-name">Plumbing</h3>
+              <p class="service-meta">Available near you</p>
+            </div>
+            <!-- Service 2 -->
+            <div class="service-card">
+              <div class="service-icon">⚡</div>
+              <h3 class="service-name">Electrical</h3>
+              <p class="service-meta">Available near you</p>
+            </div>
+            <!-- Service 3 -->
+            <div class="service-card">
+              <div class="service-icon">🛠️</div>
+              <h3 class="service-name">Repairs</h3>
+              <p class="service-meta">Available near you</p>
+            </div>
+            <!-- Service 4 -->
+            <div class="service-card">
+              <div class="service-icon">🏗️</div>
+              <h3 class="service-name">Construction & renovation</h3>
+              <p class="service-meta">Available near you</p>
+            </div>
+             <!-- Service 5 -->
+             <div class="service-card">
+              <div class="service-icon">🧹</div>
+              <h3 class="service-name">Cleaning / Care</h3>
+              <p class="service-meta">Available near you</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 5. PLATFORM ASSURANCE -->
+      <section class="assurance section-padding fade-in-up">
+        <div class="container assurance-container">
+          <h2 class="section-headline">Platform-backed assurance, not just listings</h2>
+          <div class="assurance-grid">
+            <div class="assurance-item">
+              <span class="check-icon">✓</span>
+              <span>Verified firms</span>
+            </div>
+            <div class="assurance-item">
+              <span class="check-icon">✓</span>
+              <span>Clear communication</span>
+            </div>
+            <div class="assurance-item">
+              <span class="check-icon">✓</span>
+              <span>Issue resolution</span>
+            </div>
+            <div class="assurance-item">
+              <span class="check-icon">✓</span>
+              <span>Replacement support if needed</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 6. FOR FIRMS & PARTNERS -->
+      <section class="partners section-padding fade-in-up">
+        <div class="container partners-container">
+          <div class="partners-content">
+            <h2 class="section-headline">Work with consistency.<br>Grow with trust.</h2>
+            <ul class="partners-list">
+              <li>More job visibility</li>
+              <li>Fair, transparent payouts</li>
+              <li>Platform credibility</li>
+              <li>Reduced marketing effort</li>
+            </ul>
+            <a href="#" class="btn btn-secondary">Partner with NODE</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 7. ABOUT NODE & FINAL CTA -->
+      <section class="about section-padding text-center fade-in-up">
+        <div class="container about-container">
+          <p class="about-text">NODE is being built to organise local work in India with trust, professionalism, and dignity — the way it should be.</p>
+          <div class="spacer-large"></div>
+          <h2 class="final-cta-headline">Looking for reliable local services?</h2>
+          <div class="final-cta-wrapper">
+             <a href="#" class="btn btn-primary">Find a Trusted Service</a>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="container footer-container">
+            <p>&copy; 2026 NODE. All rights reserved.</p>
+        </div>
+      </footer>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
