--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!-- 1. HERO SECTION -->
       <section class="hero-section fade-in-up">
         <div class="container hero-container">
-          <h1 class="hero-headline">NODE — The trusted connection for local work</h1>
+          <h1 class="hero-headline">The trusted connection for local work</h1>
           <p class="hero-subheadline">Verified firms. Transparent pricing. Work done with accountability.</p>
           <div class="hero-actions">
             <a href="#" class="btn btn-primary">Find a Trusted Service</a>
