--- a/index.html
+++ b/index.html
@@ -79,11 +79,18 @@
       <!-- 1. HERO SECTION -->
       <section class="hero-section fade-in-up">
         <div class="container hero-container">
-          <h1 class="hero-headline">The trusted connection for local work</h1>
-          <p class="hero-subheadline">Verified firms. Transparent pricing. Work done with accountability.</p>
-          <div class="hero-actions">
-            <a href="#" class="btn btn-primary">Find a Trusted Service</a>
-            <a href="#" class="link-secondary">How NODE Works →</a>
+          <div class="hero-content">
+            <h1 class="hero-headline">The trusted connection for local work</h1>
+            <p class="hero-subheadline">Verified firms. Transparent pricing. Work done with accountability.</p>
+            <div class="hero-actions">
+              <a href="#" class="btn btn-primary">Find a Trusted Service</a>
+              <a href="#" class="link-secondary">How NODE Works →</a>
+            </div>
+          </div>
+          <div class="hero-image-wrapper">
+             <div class="hero-card">
+               <img src="/hero_section.png" alt="NODE Hero" class="hero-img" />
+             </div>
           </div>
         </div>
       </section>
