--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>NODE</title>
   </head>
   <body>
+    <!-- Full-screen Premium Loader -->
+    <div id="loader" class="loader">
+        <div class="loader-content">
+            <h1 id="greeting-text" class="greeting-text">Hi</h1>
+        </div>
+    </div>
     <header class="header">
       <div class="header-container">
         
