--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Premium Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     <title>NODE</title>
   </head>
   <body>
@@ -105,19 +110,35 @@
       <section class="trust-strip fade-in-up delay-1">
         <div class="container trust-grid">
           <div class="trust-item">
-            <span class="trust-icon">🛡️</span>
+            <!-- Verified firms: Badge Check -->
+            <svg class="trust-icon-svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.78 4.78 4 4 0 0 1-6.74 0 4 4 0 0 1-4.78-4.78 4 4 0 0 1 0-6.74Z"></path>
+                <path d="m9 12 2 2 4-4"></path>
+            </svg>
             <span class="trust-text">Verified firms & professionals</span>
           </div>
           <div class="trust-item">
-            <span class="trust-icon">📍</span>
+            <!-- Local: Map Pin -->
+            <svg class="trust-icon-svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path>
+                <circle cx="12" cy="10" r="3"></circle>
+            </svg>
             <span class="trust-text">Local & accountable services</span>
           </div>
           <div class="trust-item">
-            <span class="trust-icon">💰</span>
+            <!-- Pricing: Tag/Banknote -->
+            <svg class="trust-icon-svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 2H2v10l9.29 9.29c.94.94 2.48.94 3.42 0l6.58-6.58c.94-.94.94-2.48 0-3.42L12 2Z"></path>
+                <path d="M7 7h.01"></path>
+            </svg>
             <span class="trust-text">Clear pricing, no surprises</span>
           </div>
           <div class="trust-item">
-            <span class="trust-icon">🤝</span>
+            <!-- Assurance: Shield Check -->
+            <svg class="trust-icon-svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                <path d="m9 12 2 2 4-4"></path>
+            </svg>
             <span class="trust-text">Platform-backed assurance</span>
           </div>
         </div>
