--- a/index.html
+++ b/index.html
@@ -143,22 +143,92 @@
         </div>
       </section>
 
-      <!-- 3. HOW NODE WORKS -->
+      <!-- 3. HOW NODE WORKS (Workflow Visual) -->
       <section class="how-it-works section-padding fade-in-up delay-2">
         <div class="container">
-          <div class="steps-grid">
-            <div class="step-card">
-              <div class="step-number">01</div>
-              <h3 class="step-title">Tell us what work you need</h3>
+          <div class="workflow-container">
+            
+            <!-- Step 1: Request (User) -->
+            <div class="workflow-step user-step">
+                <div class="workflow-icon-wrapper">
+                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="17 8 12 3 7 8"></polyline>
+                        <line x1="12" y1="3" x2="12" y2="15"></line>
+                    </svg>
+                </div>
+                <div class="workflow-content">
+                    <span class="workflow-label">Step 01</span>
+                    <h3 class="workflow-title">Define Needs</h3>
+                    <p class="workflow-desc">You post a request.</p>
+                </div>
             </div>
-            <div class="step-card">
-              <div class="step-number">02</div>
-              <h3 class="step-title">Get matched with a verified firm</h3>
+
+            <!-- Connector 1 -->
+            <div class="workflow-connector">
+                <div class="connector-line"></div>
+                <div class="connector-dot"></div>
             </div>
-            <div class="step-card">
-              <div class="step-number">03</div>
-              <h3 class="step-title">Work completed with platform assurance</h3>
+
+            <!-- Step 2: Processing (System) -->
+            <div class="workflow-step system-step">
+                <div class="workflow-icon-wrapper">
+                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 2a10 10 0 1 0 10 10 4 4 0 0 1-5-5 4 4 0 0 1-5-5"></path>
+                        <path d="M8.5 8.5v.01"></path>
+                        <path d="M16 16v.01"></path>
+                        <path d="M12 12v.01"></path>
+                    </svg> <!-- Abstract brain/node network icon -->
+                </div>
+                <div class="workflow-content">
+                    <span class="workflow-label">System</span>
+                    <h3 class="workflow-title">NODE Intelligence</h3>
+                    <p class="workflow-desc">Matches verified pros.</p>
+                </div>
             </div>
+
+            <!-- Connector 2 -->
+            <div class="workflow-connector">
+                <div class="connector-line"></div>
+                <div class="connector-dot"></div>
+            </div>
+
+            <!-- Step 3: Action (Communication) -->
+            <div class="workflow-step action-step">
+                <div class="workflow-icon-wrapper">
+                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                        <line x1="9" y1="10" x2="15" y2="10"></line>
+                    </svg>
+                </div>
+                <div class="workflow-content">
+                    <span class="workflow-label">Step 02</span>
+                    <h3 class="workflow-title">Transparent Quote</h3>
+                    <p class="workflow-desc">Review & Hire.</p>
+                </div>
+            </div>
+
+            <!-- Connector 3 -->
+            <div class="workflow-connector">
+                <div class="connector-line"></div>
+                <div class="connector-dot"></div>
+            </div>
+
+            <!-- Step 4: Result (Assurance) -->
+            <div class="workflow-step result-step">
+                <div class="workflow-icon-wrapper">
+                     <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                        <path d="m9 12 2 2 4-4"></path>
+                    </svg>
+                </div>
+                <div class="workflow-content">
+                    <span class="workflow-label">Completion</span>
+                    <h3 class="workflow-title">Assured Delivery</h3>
+                    <p class="workflow-desc">Done with guarantee.</p>
+                </div>
+            </div>
+
           </div>
         </div>
       </section>
