--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="workflow-content">
                     <span class="workflow-label">Step 01</span>
-                    <h3 class="workflow-title">Define Needs</h3>
-                    <p class="workflow-desc">You post a request.</p>
+                    <h3 class="workflow-title">Post a Request</h3>
+                    <p class="workflow-desc">Tell us what you need.</p>
                 </div>
             </div>
 
@@ -182,8 +182,8 @@
                 </div>
                 <div class="workflow-content">
                     <span class="workflow-label">System</span>
-                    <h3 class="workflow-title">NODE Intelligence</h3>
-                    <p class="workflow-desc">Matches verified pros.</p>
+                    <h3 class="workflow-title">We Match You</h3>
+                    <p class="workflow-desc">Finding the best local pros.</p>
                 </div>
             </div>
 
@@ -203,8 +203,8 @@
                 </div>
                 <div class="workflow-content">
                     <span class="workflow-label">Step 02</span>
-                    <h3 class="workflow-title">Transparent Quote</h3>
-                    <p class="workflow-desc">Review & Hire.</p>
+                    <h3 class="workflow-title">Approve & Hire</h3>
+                    <p class="workflow-desc">Check the price and book.</p>
                 </div>
             </div>
 
@@ -224,8 +224,8 @@
                 </div>
                 <div class="workflow-content">
                     <span class="workflow-label">Completion</span>
-                    <h3 class="workflow-title">Assured Delivery</h3>
-                    <p class="workflow-desc">Done with guarantee.</p>
+                    <h3 class="workflow-title">Work Done</h3>
+                    <p class="workflow-desc">Completed with guarantee.</p>
                 </div>
             </div>
 
