--- a/index.html
+++ b/index.html
@@ -233,40 +233,63 @@
         </div>
       </section>
 
-      <!-- 4. SERVICES OVERVIEW -->
+      <!-- 4. SERVICES OVERVIEW (Circular Node Network) -->
       <section class="services section-padding fade-in-up">
         <div class="container">
-          <div class="services-grid">
-            <!-- Service 1 -->
-            <div class="service-card">
-              <div class="service-icon">🔧</div>
-              <h3 class="service-name">Plumbing</h3>
-              <p class="service-meta">Available near you</p>
+          <div class="services-node-wrapper">
+            
+            <!-- Central Hub -->
+            <div class="node-center">
+                <div class="node-center-content">
+                    <img src="/logo.png" alt="NODE" class="node-logo" />
+                    <!-- Alternatively use text if logo isn't ideal for circular center -->
+                    <!-- <span class="node-center-text">NODE</span> -->
+                </div>
+                <!-- Connector Lines (Visual only, absolute) -->
+                <div class="connector-radiant c1"></div>
+                <div class="connector-radiant c2"></div>
+                <div class="connector-radiant c3"></div>
+                <div class="connector-radiant c4"></div>
+                <div class="connector-radiant c5"></div>
             </div>
-            <!-- Service 2 -->
-            <div class="service-card">
-              <div class="service-icon">⚡</div>
-              <h3 class="service-name">Electrical</h3>
-              <p class="service-meta">Available near you</p>
+
+            <!-- Service Nodes (Positioned around center) -->
+            
+            <!-- Node 1: Plumbing (Top Left) -->
+            <div class="service-node node-1">
+                <div class="node-icon">🔧</div>
+                <h3 class="node-title">Plumbing</h3>
+                <p class="node-desc">Expert Care</p>
             </div>
-            <!-- Service 3 -->
-            <div class="service-card">
-              <div class="service-icon">🛠️</div>
-              <h3 class="service-name">Repairs</h3>
-              <p class="service-meta">Available near you</p>
+
+            <!-- Node 2: Electrical (Top Right) -->
+            <div class="service-node node-2">
+                <div class="node-icon">⚡</div>
+                <h3 class="node-title">Electrical</h3>
+                <p class="node-desc">Safe & Certified</p>
             </div>
-            <!-- Service 4 -->
-            <div class="service-card">
-              <div class="service-icon">🏗️</div>
-              <h3 class="service-name">Construction & renovation</h3>
-              <p class="service-meta">Available near you</p>
+
+            <!-- Node 3: Repairs (Right) -->
+            <div class="service-node node-3">
+                <div class="node-icon">🛠️</div>
+                <h3 class="node-title">Repairs</h3>
+                <p class="node-desc">Quick Fixes</p>
             </div>
-             <!-- Service 5 -->
-             <div class="service-card">
-              <div class="service-icon">🧹</div>
-              <h3 class="service-name">Cleaning / Care</h3>
-              <p class="service-meta">Available near you</p>
+
+            <!-- Node 4: Construction (Bottom Right) -->
+            <div class="service-node node-4">
+                <div class="node-icon">🏗️</div>
+                <h3 class="node-title">Construction</h3>
+                <p class="node-desc">Built to Last</p>
             </div>
+
+            <!-- Node 5: Cleaning (Bottom Left) -->
+            <div class="service-node node-5">
+                <div class="node-icon">🧹</div>
+                <h3 class="node-title">Cleaning</h3>
+                <p class="node-desc">Spotless Living</p>
+            </div>
+
           </div>
         </div>
       </section>
