--- a/index.html
+++ b/index.html
@@ -259,35 +259,35 @@
             <div class="service-node node-1">
                 <div class="node-icon">🔧</div>
                 <h3 class="node-title">Plumbing</h3>
-                <p class="node-desc">Expert Care</p>
+                <p class="node-desc">Leaks, fittings, and water system repairs</p>
             </div>
 
             <!-- Node 2: Electrical (Top Right) -->
             <div class="service-node node-2">
                 <div class="node-icon">⚡</div>
                 <h3 class="node-title">Electrical</h3>
-                <p class="node-desc">Safe & Certified</p>
+                <p class="node-desc">Wiring, switches, and electrical fixes</p>
             </div>
 
             <!-- Node 3: Repairs (Right) -->
             <div class="service-node node-3">
                 <div class="node-icon">🛠️</div>
                 <h3 class="node-title">Repairs</h3>
-                <p class="node-desc">Quick Fixes</p>
+                <p class="node-desc">Everyday home and utility repairs</p>
             </div>
 
             <!-- Node 4: Construction (Bottom Right) -->
             <div class="service-node node-4">
                 <div class="node-icon">🏗️</div>
                 <h3 class="node-title">Construction</h3>
-                <p class="node-desc">Built to Last</p>
+                <p class="node-desc">Small construction and renovation work</p>
             </div>
 
             <!-- Node 5: Cleaning (Bottom Left) -->
             <div class="service-node node-5">
                 <div class="node-icon">🧹</div>
                 <h3 class="node-title">Cleaning</h3>
-                <p class="node-desc">Spotless Living</p>
+                <p class="node-desc">Professional one-time cleaning services</p>
             </div>
 
           </div>
