--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Premium Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <title>NODE</title>
   </head>
   <body>
@@ -294,43 +294,40 @@
         </div>
       </section>
 
-      <!-- 5. PLATFORM ASSURANCE -->
-      <section class="assurance section-padding fade-in-up">
-        <div class="container assurance-container">
-          <h2 class="section-headline">Platform-backed assurance, not just listings</h2>
-          <div class="assurance-grid">
-            <div class="assurance-item">
-              <span class="check-icon">✓</span>
-              <span>Verified firms</span>
-            </div>
-            <div class="assurance-item">
-              <span class="check-icon">✓</span>
-              <span>Clear communication</span>
-            </div>
-            <div class="assurance-item">
-              <span class="check-icon">✓</span>
-              <span>Issue resolution</span>
-            </div>
-            <div class="assurance-item">
-              <span class="check-icon">✓</span>
-              <span>Replacement support if needed</span>
-            </div>
-          </div>
-        </div>
-      </section>
+
 
       <!-- 6. FOR FIRMS & PARTNERS -->
       <section class="partners section-padding fade-in-up">
         <div class="container partners-container">
           <div class="partners-content">
-            <h2 class="section-headline">Work with consistency.<br>Grow with trust.</h2>
-            <ul class="partners-list">
-              <li>More job visibility</li>
-              <li>Fair, transparent payouts</li>
-              <li>Platform credibility</li>
-              <li>Reduced marketing effort</li>
-            </ul>
-            <a href="#" class="btn btn-secondary">Partner with NODE</a>
+            <h2 class="partners-headline">“Work with consistency.<br>Grow with <span class="highlight-text">trust</span>.”</h2>
+            
+            <div class="partners-list">
+                <div class="partner-item">
+                    <span class="partner-dot"></span>
+                    <span>More job visibility</span>
+                </div>
+                <div class="partner-item">
+                    <span class="partner-dot"></span>
+                    <span>Fair, transparent payouts</span>
+                </div>
+                <div class="partner-item">
+                    <span class="partner-dot"></span>
+                    <span>Platform credibility</span>
+                </div>
+                <div class="partner-item">
+                    <span class="partner-dot"></span>
+                    <span>Reduced marketing effort</span>
+                </div>
+            </div>
+
+            <a href="#" class="btn btn-partner">
+                <span>Partner with NODE</span>
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn-icon-right">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                    <polyline points="12 5 19 12 12 19"></polyline>
+                </svg>
+            </a>
           </div>
         </div>
       </section>
