--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- 2. CENTER-LEFT: Primary Navigation -->
         <nav class="primary-nav">
           <a href="#" class="nav-item" data-i18n="nav_services">Services</a>
-          <a href="#" class="nav-item" data-i18n="nav_how_it_works">How It Works</a>
+          <a href="#how-it-works" class="nav-item" data-i18n="nav_how_it_works">How It Works</a>
           <a href="#" class="nav-item" data-i18n="nav_professionals">For Professionals</a>
         </nav>
 
@@ -112,7 +112,7 @@
     <div class="mobile-nav-drawer">
         <nav class="mobile-nav">
             <a href="#" class="mobile-nav-item" data-i18n="nav_services">Services</a>
-            <a href="#" class="mobile-nav-item" data-i18n="nav_how_it_works">How It Works</a>
+            <a href="#how-it-works" class="mobile-nav-item" data-i18n="nav_how_it_works">How It Works</a>
             <a href="#" class="mobile-nav-item" data-i18n="nav_professionals">For Professionals</a>
             <!-- Mobile Location Selector could go here too if needed, keeping it simple for now -->
             <div class="mobile-location">
@@ -130,7 +130,7 @@
             <p class="hero-subheadline" data-i18n="hero_subheadline">Verified firms. Transparent pricing. Work done with accountability.</p>
             <div class="hero-actions">
               <a href="#" class="btn btn-primary" data-i18n="btn_find_service">Find a Trusted Service</a>
-              <a href="#" class="link-secondary" data-i18n="link_how_node_works">How NODE Works →</a>
+              <a href="#how-it-works" class="link-secondary" data-i18n="link_how_node_works">How NODE Works →</a>
             </div>
           </div>
           <div class="hero-image-wrapper">
@@ -180,7 +180,7 @@
       </section>
 
       <!-- 3. HOW IT WORKS (Restored Premium Design) -->
-      <section class="how-it-works section-padding fade-in-up">
+      <section id="how-it-works" class="how-it-works section-padding fade-in-up">
         <div class="container">
             <h2 class="section-headline text-center mb-large" data-i18n="hiw_headline">How it works</h2>
             
