--- a/service.html
+++ b/service.html
@@ -168,7 +168,7 @@
       <section class="section-padding text-center">
         <div class="container">
             <h2 id="cta-headline" class="section-headline mb-medium">Need Reliable Support?</h2>
-            <button class="btn btn-primary btn-large">Request Service</button>
+            <button id="cta-request-btn" class="btn btn-primary btn-large">Request Service</button>
         </div>
       </section>
       
